testsuite/positive/bug-1241.n
using System;
using System.Console;

module Program {

  Main() : void {
    mutable x = 'q';
    x++;
    WriteLine(x);
    ++x;
    WriteLine(x);
    x--;
    WriteLine(x);
    --x;
    WriteLine(x);
  }

}
/*
BEGIN-OUTPUT
r
s
r
q
END-OUTPUT
*/