testsuite/negative/partial-2.n
using System;

partial class Foo
{
  public mutable partial x : int;         //E: invalid attribute `partial' .*

  public partial Foo() : void { }         //E: invalid attribute `partial' .*

  public partial Y : int { get; set; }    //E: invalid attribute `partial' .*

  public partial event Z : EventHandler;  //E: invalid attribute `partial' .*
}